--- a/src/main/resources/templates/goods-list.html
+++ b/src/main/resources/templates/goods-list.html
@@ -18,6 +18,11 @@
        class="btn btn-primary btn-sm mb-3">
         Add Goods
     </a>
+    <a th:href="@{/goods/find}"
+       class="btn btn-primary btn-sm mb-3">
+        Find Goods
+    </a>
+
 </div>
 <div>
     <table class="table">
