--- a/src/main/resources/templates/goods-find.html
+++ b/src/main/resources/templates/goods-find.html
@@ -7,40 +7,60 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
-<h1>Goods form</h1>
+<h1>Find goods</h1>
 <div>
     <a th:href="@{/goods}"
        class="btn btn-primary btn-sm mb-3">
         Goods list
     </a>
 </div>
-<div class="container">
-    <form th:action="@{/goods/formForUpdate}" th:object="${goods}" method="POST">
+<div class="container mt-5">
+    <h2 align="center">Search in Goods List</h2>
+    <form th:action="@{/filter}" method="get">
+        <input type="text" name="keyword" th:value="${search}"  placeholder="Find by Category" size="50" >
+        <button type="submit" class="btn btn-info">Search</button>
 
-        <input type="hidden" class="form-control" id="id" th:field="*{id}">
+        <button type="reset" class="btn btn-info">Reset</button>
 
-        <div class="mb-3">
-            <label for="category" class="form-label">Category</label>
-            <input type="text" class="form-control" id="category" th:field="*{category}">
-
-        </div>
-        <div class="mb-3">
-            <label for="goodsCode" class="form-label">Goods Code</label>
-            <input type="text" class="form-control" id="goodsCode" th:field="*{goodsCode}">
-
-        </div>
-        <div class="mb-3">
-            <label for="color" class="form-label">Color</label>
-            <input type="text" class="form-control" id="color" th:field="*{color}">
-
-        </div>
-        <div class="mb-3">
-            <label for="price" class="form-label">Price</label>
-            <input type="text" class="form-control" id="price" th:field="*{price}">
-
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+    <table class="table table-bordered table-sm mt-2">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Category</th>
+            <th>Goods Code</th>
+            <th>Color</th>
+            <th>Price</th>
+
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="l : ${search}" th:field="${l}">
+            <td th:text="${lStat.index+1}"></td>
+            <td th:text="${l.category}"></td>
+            <td th:text="${l.goodsCode}"></td>
+            <td th:text="${l.color}"></td>
+            <td th:text="${l.price}"></td>
+
+
+
+                <a th:href="@{/goods/formForUpdate(goodsID=${l.id})}"
+                   class="btn btn-info btn-sm mb-3">
+                    Update
+                </a>
+
+            </td>
+            <td>
+                <a th:href="@{/update/{id}(id=${l.id})}" ><i class="fa fa-edit" ></i></a>
+                <a th:href="@{/delete/{id}(id=${l.id})}" ><i class="fa fa-remove"></i></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
+
+
+
