--- a/src/main/resources/templates/goods-list.html
+++ b/src/main/resources/templates/goods-list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Employee List</title>
+    <title>Goods List</title>
 
     <link rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 <!--    <link rel="stylesheet" th:href="@{/css/main.css}"/>-->
@@ -18,14 +18,14 @@
        class="btn btn-primary btn-sm mb-3">
         Add Goods
     </a>
-    <a th:href="@{/goods/find}"
+    <a th:href="@{/goods/filter}"
        class="btn btn-primary btn-sm mb-3">
         Find Goods
     </a>
 
 </div>
 <div>
-    <table class="table">
+    <table class="table table-sm">
         <thead>
         <tr>
             <th scope="col"> Id </th>
@@ -48,7 +48,7 @@
             <td><span th:text="${goods.color}"> Color </span></td>
             <td><span th:text="${goods.price}"> Price </span></td>
             <td>
-                <a th:href="@{/goods/formForUpdate(goodsId=${goods.id})}"
+                <a th:href="@{/goods/formForUpdate(goodsID=${goods.id})}"
                    class="btn btn-info btn-sm mb-3">
                     Update
                 </a>
