--- a/src/main/resources/templates/product-find.html
+++ b/src/main/resources/templates/product-find.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
-<h1>Find goods</h1>
+<h1>Find product</h1>
 <div>
-    <a th:href="@{/goods}"
+    <a th:href="@{/products}"
        class="btn btn-primary btn-sm mb-3">
-        Goods list
+        Products list
     </a>
 </div>
 <div class="container mt-5">
     <h2 align="center">Search in Goods List</h2>
-    <form action="#"  th:action="@{/goods/filter}" th:object="${goods}" method="get">
+    <form action="#"  th:action="@{/products/filter}" th:object="${product}" method="get">
 
         <input type="text" name="category" id="category"   placeholder="Find by Category" size="50" >
 
@@ -26,9 +26,9 @@
         <button type="reset" class="btn btn-info">Reset</button>
 
     </form>
-    <form action="#"  th:action="@{/goods/filter/code}" th:object="${goods}" method="get">
+    <form action="#"  th:action="@{/products/filter/code}" th:object="${product}" method="get">
 
-        <input type="text"  name="goodsCode" id="goodsCode"   placeholder="Find by Code" size="50" >
+        <input type="text"  name="code" id="code"   placeholder="Find by Code" size="50" >
 
         <button type="submit" class="btn btn-info"  value="filter" >Search</button>
 
@@ -41,7 +41,7 @@
         <tr>
             <th>Id</th>
             <th>Category</th>
-            <th>Goods Code</th>
+            <th>Code</th>
             <th>Color</th>
             <th>Price</th>
             <th>Action</th>
@@ -49,21 +49,21 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="l : ${goods}" th:field="${goods}">
+        <tr th:each="l : ${product}" th:field="${product}">
             <td th:text="${lStat.index+1}"></td>
             <td th:text="${l.category}"></td>
-            <td th:text="${l.goodsCode}"></td>
+            <td th:text="${l.code}"></td>
             <td th:text="${l.color}"></td>
             <td th:text="${l.price}"></td>
 
             <td>
-                <a th:href="@{/goods/formForUpdate(goodsID=${l.id})}"
+                <a th:href="@{/product/formForUpdate(productID=${l.id})}"
                    class="btn btn-info btn-sm mb-3">
                     Update
                 </a>
-                <a th:href="@{/goods/delete(goodsId=${l.id})}"
+                <a th:href="@{/product/delete(productId=${l.id})}"
                    class="btn btn-danger btn-sm mb-3"
-                   onclick="if ( !(confirm('Are you sure you want to delete this goods?'))) return false">
+                   onclick="if ( !(confirm('Are you sure you want to delete this product?'))) return false">
                     Delete
                 </a>
             </td>
