--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
-<h1>Goods form</h1>
+<h1>Product form</h1>
 <div>
-    <a th:href="@{/goods}"
+    <a th:href="@{/products}"
        class="btn btn-primary btn-sm mb-3">
-        Goods list
+        Product list
     </a>
 </div>
 <div class="container">
-    <form th:action="@{/goods/save}" th:object="${goods}" method="POST">
+    <form th:action="@{/products/save}" th:object="${product}" method="POST">
 
         <input type="hidden" class="form-control" id="id" th:field="*{id}">
 
@@ -25,9 +25,9 @@
             <td th:if="${#fields.hasErrors('category')}" th:errors="*{category}">Category Error</td>
         </div>
         <div class="mb-3">
-            <label for="goodsCode" class="form-label">Goods Code</label>
-            <input type="text" class="form-control" id="goodsCode" th:field="*{goodsCode}">
-            <td th:if="${#fields.hasErrors('goodsCode')}" th:errors="*{goodsCode}">Goods Code Error</td>
+            <label for="code" class="form-label">Product Code</label>
+            <input type="text" class="form-control" id="code" th:field="*{code}">
+            <td th:if="${#fields.hasErrors('code')}" th:errors="*{code}">Code Error</td>
         </div>
         <div class="mb-3">
             <label for="color" class="form-label">Color</label>
