--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -16,8 +16,10 @@
 </div>
 <div class="container">
 
-    <form method="POST" action="/upload" enctype="multipart/form-data">
+    <form method="POST" th:action="@{/upload(productID=*{id})}" th:object="${product}" enctype="multipart/form-data">
         <input type="file" name="file" /><br/><br/>
+<!--        <input type="text" class="form-control" id="id" th:field="*{id}">-->
+
         <input type="submit" value="Submit" />
     </form>
 
@@ -25,10 +27,6 @@
     <form th:action="@{/products/save}" th:object="${product}" method="POST">
 
         <input type="hidden" class="form-control" id="id" th:field="*{id}">
-
-
-
-
 
         <div class="mb-3">
             <label for="category" class="form-label">Category</label>
