--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -28,7 +28,7 @@
 <div>
         <label>Photos: </label>
         <input type="file" name="images" accept="image/png, image/jpeg" />
-        <img src="../static/images/furniture.png"  float=center width="150"  th:src="@{images/furniture.png}" />
+        <img src="../static/images/furniture.png" width="150"  th:src="@{images/furniture.png}" />
 
 </div>
 <div>
