--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -16,15 +16,11 @@
 </div>
 <div class="container">
 
-    <form method="POST" th:action="@{/upload(productID=*{id})}" th:object="${product}" enctype="multipart/form-data">
+    <form th:action="@{/products/saveUpload}" th:object="${product}" enctype="multipart/form-data" method="POST">
+
+
+        <input type="hidden" class="form-control" id="image" th:field="*{image}">
         <input type="file" name="file" /><br/><br/>
-<!--        <input type="text" class="form-control" id="id" th:field="*{id}">-->
-
-        <input type="submit" value="Submit" />
-    </form>
-
-
-    <form th:action="@{/products/save}" th:object="${product}" method="POST">
 
         <input type="hidden" class="form-control" id="id" th:field="*{id}">
 
