--- a/src/main/resources/templates/product-find.html
+++ b/src/main/resources/templates/product-find.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Goods List</title>
-
+    <link rel="stylesheet" th:href="@{/css/styleFind.css/}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 </head>
+
 <body>
 <h1>Find product</h1>
 <div>
     <a th:href="@{/products}"
-       class="btn btn-primary btn-sm mb-3">
+       class="button">
         Products list
     </a>
 </div>
@@ -57,11 +58,11 @@
             <td th:text="${l.price}"></td>
 
             <td>
-                <a th:href="@{/product/formForUpdate(productID=${l.id})}"
+                <a th:href="@{/products/formForUpdate(productID=${l.id})}"
                    class="btn btn-info btn-sm mb-3">
                     Update
                 </a>
-                <a th:href="@{/product/delete(productId=${l.id})}"
+                <a th:href="@{/products/delete(productId=${l.id})}"
                    class="btn btn-danger btn-sm mb-3"
                    onclick="if ( !(confirm('Are you sure you want to delete this product?'))) return false">
                     Delete
