--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Goods List</title>
-
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/styleForm.css/}"/>
+<!--    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>-->
 </head>
+
 <body>
 <h1>Product form</h1>
 <div>
     <a th:href="@{/products}"
-       class="btn btn-primary btn-sm mb-3">
+       class="button">
         Product list
+
     </a>
 </div>
 <div class="container">
@@ -44,7 +46,7 @@
             <input type="text" class="form-control" id="price" th:field="*{price}">
             <td th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</td>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="button3">Submit</button>
 
     </form>
 </div>
